Ajout d'une courte présentation

--- a/hello.html
+++ b/hello.html
@@ -13,8 +13,12 @@
 	<body>
 
 		<!-- TITRE -->
-		<div>
+		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
+		</div>
+
+		<div>
+			<p>Hello c'est Emeric, je ne sais pas quoi dire, c'est pour l'exo</p>
 		</div>
 		
 	
