--- a/hello.html
+++ b/hello.html
@@ -17,8 +17,16 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 
+		<!-- un commentaire bjr -->
+
 		<div>
+			<h1>salut c cool</h1>
 			<p>Hello c'est Emeric, je ne sais pas quoi dire, c'est pour l'exo</p>
+		</div>
+
+		<div>
+			<h1>salut c nul</h1>
+			<p>Hello c'est Emeric, je ne sais pas quoi dire, c'est pour l'exo; aled</p>
 		</div>
 		
 	
