--- a/hello.html
+++ b/hello.html
@@ -25,8 +25,8 @@
 		</div>
 
 		<div>
-			<h1>salut c nul</h1>
-			<p>Hello c'est Emeric, je ne sais pas quoi dire, c'est pour l'exo; aled</p>
+			<h1>les récompenses</h1>
+			<p><img src="images/bronze.png"></p>
 		</div>
 		
 		<div>
