--- a/hello.html
+++ b/hello.html
@@ -26,7 +26,7 @@
 
 		<div>
 			<h1>les récompenses</h1>
-			<p><img src="images/bronze.png"></p>
+			<p><img src="images/medal_bronze.png"></p>
 		</div>
 		
 		<div>
