--- a/hello.html
+++ b/hello.html
@@ -26,7 +26,10 @@
 
 		<div>
 			<h1>les récompenses</h1>
-			<p><img src="images/medal_bronze.png"></p>
+			<p>
+				<img src="images/medal_bronze.png">
+				<img src="images/medal_silver.png">
+			</p>
 		</div>
 		
 		<div>
