--- a/hello.html
+++ b/hello.html
@@ -38,4 +38,9 @@
 			<script src="https://gist.github.com/emericsoquet/5001aa6967a93d881a8e4b1babfbf565.js"></script>
 		</div>
 
+		<div>
+			<h1>Commandes Git</h1>
+			<p>git log</p>
+		</div>
+
 </body></html>
